  version number to same.
- Reimplemented locator algorithms in many grid classes yet again.
- Fixed DICOM image stack module to properly handle more DICOM file
  flavors.
- Added new (experimental) module for multi-valued Cartesian data sets
  read from multiple binary grid files in made-up simple .vol format.
- Forgot updating the HISTORY file, so there are probably a ton more. ;)
- Adapted 3D Visualizer to Vrui release 2.1-xxx and bumped required Vrui
  version number to same.
- Moved template implementation files to .icpp file extension for
  consistency with Vrui library and other packages.

3D Visualizer 1.9:
- Bumped required Vrui version number to 2.2-001.
- Allowed to completely disable data set rendering via the Rendering
  Modes menu.
- Added direct handling of additional scene graphs, with ability to
  toggle visibility of individual scene graphs to Rendering Modes menu.

3D Visualizer 1.10:
- Bumped required Vrui version number to 2.3-001.
- Added custom shader implementation of isosurface illumination model
  for tremendous speed-ups on Nvidia Geforce-level cards.
- Custom shader is incompatible with 3D Visualizer's cutting plane
  algorithm; use Vrui's clipping plane tool (under pointing tools)
  instead.

3D Visualizer 1.11:
- Bumped required Vrui version number to 2.4-001.
- Improved rendering pipeline throughout by minimizing OpenGL context
  state changes.
- Added shader-based renderer for color-mapped isosurfaces for moderate
  speed-ups on Nvidia Geforce-level cards.
- Added comment skipping (# marks comment up to end of line) to input
  metafile (.in) parser.
- Added comment-skipping (# marks comment up to end of line) to
  ImageStack's stack descriptor parser.
- Made ImageStack class cluster-aware to reduce data set load times in
  cluster environments.
- Added module class SCTFile for Cartesian single-channel volumetric
  data sets created by LLNL-developed reprojection code.