@@ -2,7 +2,7 @@
 CitcomSRegionalASCIIFile - Class reading ASCII files produced by
 parallel regional CitcomS simulations. These are the uncombined files
 produced by each CPU in a parallel run.
-Copyright (c) 2008-2011 Oliver Kreylos
+Copyright (c) 2008-2012 Oliver Kreylos
 
 This file is part of the 3D Data Visualizer (Visualizer).
 
